[project]
name = "datar-arrow"
version = "0.2.0"
description = "The pyarrow backend for datar"
authors = [{name = "pwwang", email = "pwwang@pwwang.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datar>=0.15",
    "pyarrow>=20",
]

[project.optional-dependencies]
scipy = ["scipy>=1.6"]
wcwidth = ["wcwidth>=0.2"]
all = ["scipy>=1.6", "wcwidth>=0.2"]

[project.entry-points.datar]
arrow = "datar_arrow:plugin"

[dependency-groups]
dev = ["pytest>=7", "pytest-cov>=4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datar_arrow"]

[tool.pytest.ini_options]
addopts = "-vv -p no:asyncio --tb=short --cov=datar_arrow --cov-report xml:cov.xml --cov-report term-missing"
filterwarnings = [
    # "error"
]
console_output_style = "progress"
junit_family = "xunit1"

[tool.black]
line-length = 89

[tool.pyright]
reportAttributeAccessIssue = false
reportFunctionMemberAccess = false
